addressing PR comments